test/tests/compiler/17_supporting_dynamic_memory_allocation/invalid_parse/bad_specifier_2.plx
pub x: *any char; # you can't combine void with other type specifiers

pub fn main(none) i32 { return 0 }
